# TrackerStabilizer

./: CMakeLists.txt  qSlicerTrackerStabilizerModule.cxx  qSlicerTrackerStabilizerModule.h  qSlicerTrackerStabilizerModuleWidget.cxx  qSlicerTrackerStabilizerModuleWidget.h
Documentation/: TrackerStabilizer.dox
Logic/: vtkSlicerTrackerStabilizerLogic.cxx  vtkSlicerTrackerStabilizerLogic.h
MRML/: CMakeLists.txt  vtkMRMLTrackerStabilizerNode.cxx  vtkMRMLTrackerStabilizerNode.h
Resources/: qSlicerTrackerStabilizerModule.qrc
Resources/UI/: qSlicerTrackerStabilizerFilteringWidget.ui  qSlicerTrackerStabilizerModuleWidget.ui
Widgets/: CMakeLists.txt  qSlicerTrackerStabilizerFilteringWidget.cxx  qSlicerTrackerStabilizerFilteringWidget.h
